# EdenticV3

./: .gitignore  AGENTS.md  README.md  index.html  package.json
assets/: README.md  manifest.json
docs/: ARCHITECTURE.md  SLICE-1-TESTING.md
python/: requirements.txt  transcribe.py
scripts/: build-frontend.mjs  dev-server.mjs  tauri-dev.mjs
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: asset_commands.rs  commands.rs  indexing.rs  lib.rs  main.rs  media.rs  models.rs  openrouter.rs  recovery.rs  storage.rs  theme.rs
src/app/: api.js  demo.js  format.js  icons.js  render.js  state.js  workspace-runtime.js
src/app/views/: home.js  overlays.js  workspace.js
src/styles/: base.css  branding.css  home.css  logo-motion.css  recovery.css  settings.css  theme-adaptive-v2.css  theme-adaptive.css  tokens.css  workspace-controls.css  workspace.css
tests/: frontend.test.mjs  slice1-media-repair.test.mjs
